[gd_scene load_steps=11 format=3 uid="uid://b8i1qvnuxins2"]

[ext_resource type="Texture2D" uid="uid://dfjr6irfjiau5" path="res://Images/UI/wallpaper.png" id="1_b6yin"]
[ext_resource type="FontFile" uid="uid://bt4so7ycsuo54" path="res://Fonts/RockSalt-Regular.ttf" id="2_m7yqs"]
[ext_resource type="Script" path="res://Scripts/UI/changenamelabel.gd" id="3_6nkte"]
[ext_resource type="Texture2D" uid="uid://bdx4nenkrh1k1" path="res://Images/UI/buttonUI.png" id="4_qw32j"]
[ext_resource type="Script" path="res://Scripts/UI/buttonstart.gd" id="5_yycqe"]
[ext_resource type="AudioStream" uid="uid://cbivtafeobght" path="res://Audios/game-music-player-console-8bit-background-intro-theme-297305.mp3" id="6_61y12"]
[ext_resource type="Script" path="res://Scripts/UI/buttonexit.gd" id="6_s4vfg"]
[ext_resource type="AudioStream" uid="uid://djm01fb235fp8" path="res://Audios/pickupCoin.wav" id="7_1ogs1"]

[sub_resource type="GDScript" id="GDScript_uvk3j"]
script/source = "extends Control
"

[sub_resource type="LabelSettings" id="LabelSettings_pwey8"]
font = ExtResource("2_m7yqs")
font_size = 45
font_color = Color(0.729412, 1, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_uvk3j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 3.0
offset_right = 1920.0
offset_bottom = 963.0
scale = Vector2(0.599784, 0.672283)
texture = ExtResource("1_b6yin")

[node name="lblTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 75.0
offset_right = 973.0
offset_bottom = 150.0
label_settings = SubResource("LabelSettings_pwey8")
script = ExtResource("3_6nkte")

[node name="btnStart" type="Button" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 211.0
offset_right = 738.0
offset_bottom = 303.0
icon = ExtResource("4_qw32j")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("5_yycqe")

[node name="btnQuitGame" type="Button" parent="."]
layout_mode = 0
offset_left = 449.0
offset_top = 327.0
offset_right = 735.0
offset_bottom = 419.0
icon = ExtResource("4_qw32j")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_s4vfg")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_61y12")
autoplay = true

[node name="audiobutton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1ogs1")

[connection signal="mouse_entered" from="btnStart" to="btnStart" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="btnStart" to="btnStart" method="_on_mouse_exited"]
[connection signal="pressed" from="btnStart" to="btnStart" method="_on_pressed"]
[connection signal="mouse_entered" from="btnQuitGame" to="btnQuitGame" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="btnQuitGame" to="btnQuitGame" method="_on_mouse_exited"]
[connection signal="pressed" from="btnQuitGame" to="btnQuitGame" method="_on_pressed"]
